--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/peso0517/typescript#readme",
   "devDependencies": {
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   }
 }
