--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "practice typescript",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node-dev --respawn",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/peso0517/typescript#readme",
   "devDependencies": {
     "ts-node": "^10.7.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.4"
   }
 }
